Init new CLI framework

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
   "description": "Command Line Interface Application for Pano.",
     "type": "project",
   "license": "GPL-3.0-only",
-  "require": {}
+  "require": {
+    "corneltek/cliframework": "~4.0.0"
+  },
+  "minimum-stability": "dev"
 }
