--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
   "require": {
     "corneltek/cliframework": "~4.0.0"
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "config": {
+    "vendor-dir": "app/vendor/"
+  }
 }
